Fix Spacing in Remarks Section
- take the heading out of the legend
- put optional label in a span so that it can be floated right
- remove unused css

--- a/src/components/Office/ServicesCounselingShipmentForm/ServicesCounselingShipmentForm.module.scss
+++ b/src/components/Office/ServicesCounselingShipmentForm/ServicesCounselingShipmentForm.module.scss
@@ -24,10 +24,6 @@
     @include u-margin-bottom(3);
   }
 
-  :global(.usa-legend + .usa-label) {
-    @include u-margin-top(0);
-  }
-
   :global(.usa-legend + .usa-form-group) {
     @include u-margin-top(3);
   }
